--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,7 +2,7 @@ ja:
  activerecord:
    attributes:
      user:
-       name: ニックネーム
+       name: ユーザーネーム
        email: メールアドレス
      tweet:
        text: テキスト
