--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,5 +5,6 @@ ja:
        name: ユーザーネーム
        email: メールアドレス
      tweet:
-       text: テキスト
+       title: タイトル
+       introduction: 説明文
        image: 画像
